--- a/mystyle.css
+++ b/mystyle.css
@@ -5,7 +5,7 @@ body {
     height: 100vh;
     font-family: Arial, sans-serif;
     padding: 0;
-    background-color: #414040;
+    background-color: #1B263B;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -15,13 +15,14 @@ body {
     text-align: center;
     font-family: 'Lobster', cursive;
     font-weight: bold;
-    color: #ffffff;
+    color: #E0E1DD;
     padding-top: 20px;
+    background-color:  #0D1B2A ;
 }
 
 
 .Top {
-    color: #ddd;
+    color: #E0E1DD ;
     text-align: right;
     margin: 5px ; 
     font-family: 'Lucida Handwriting', Cursive;
@@ -80,13 +81,15 @@ body {
 
 
 nav {
+    background-color: #152545;
     position: sticky;
-    margin: 10px 15px;
+    margin: - 15px;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 15px;
+    
 }
 
 nav ul li {
@@ -102,6 +105,7 @@ nav ul li a {
 
 nav ul li a:hover {
     text-decoration: underline;
+    color: #D00000
 }
 
 .video-container {
@@ -116,8 +120,8 @@ video {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    background-color: #3A506B;
+    color: #FFD700;
     text-align: center;
     padding: 10px;
     position: fixed;
